--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.jsm.sora"
+      "package": "com.m56.health"
     },
     "web": {
       "favicon": "./assets/favicon.png"
